<resources>
    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="favorito">Favorito</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email:</string>
    <string name="telefone_favorito">Contato Telefone Favorito</string>
    <string name="excluir">Excluir</string>
    <string name="alterar">Alterar</string>
    <string name="telefone_contato">Telefone Contato:</string>
    <string name="data_nascimento">Data de Nascimento:</string>
</resources>
