<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"/>

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/idNascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_nascimento" />

    <EditText
        android:id="@+id/editTextDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/idTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"/>

    <EditText
        android:id="@+id/editTextFone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/idTelefoneContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone_contato"/>

    <EditText
        android:id="@+id/editTextFoneContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/idEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Switch
        android:id="@+id/favorito"
        android:textOn="@string/On"
        android:textOff="@string/Off"
        android:text="@string/favorito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>